--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,33 +5,44 @@ body{
     font-family: 'Overpass', sans-serif;
 
 }
-.posibilities{
+
+.calc{
+    width:600px;
+    border: solid  2px #555;
+    border-radius:5px;
+    background-color: rgb(17, 17, 15);
+    padding:20px;
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows:80px;
+    gap:20px;
+}
+// т.к calc_result является элементом сетки(.calc{display:grid}), надо контейнер calc_result растянуть на всю ширину контейнера calc. Свойство grid-column: 1/-1;
+
+.calc_result{
     
-    .container{
-        
-        background: $bgColor;
-        
+    grid-column: 1/ -1;
+    background-color: rgb(235, 252, 252);
+    color:black;
+    padding:15px;
+    font-size: 45px;
+}
+
+.calc_btn{
+    border-radius: 10px;
+    font-size: 25px;
+    background-color: rgb(211, 183, 22);
+    &:hover{
+        background-color: rgb(98, 199, 165);
     }
 }
-p {
-    font-family: 'helvetica neue', helvetica, sans-serif;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    border: 2px solid rgba(0,0,200,0.6);
-    background: rgba(0,0,200,0.3);
-    color: rgba(0,0,200,0.6);
-    box-shadow: 1px 1px 2px rgba(0,0,200,0.4);
-    border-radius: 10px;
-    padding: 3px 10px;
-    display: inline-block;
-    cursor:pointer;
-  }
-  
-  .form input[type="number"] {
-    width: 200px;
-  }
-  .lastResult {
-    color: white;
-    padding: 3px;
-  }
+
+.calc_btn_operator{
+    background-color: rgb(45, 189, 255);
+}
+.calc_btn_reset{
+background-color:red;
+}
+.calc_btn_equal{
+    background-color: #D55448;
+}
